<resources>

    <string name="app_name">Body Mass Index Calculator</string>
    <string name="main_title">BMI Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="secondHello">Hello Again</string>
    <string name="submitButton">Submit</string>
    <string name="mHeight">Height - cm</string>
    <string name="mWeight">Weight - kg</string>
    <string name="iFeetHeight">Feet</string>
    <string name="iInchesHeight">Inches</string>
    <string name="impWeight">Weight - lb</string>
    <string name="units">Change Units:</string>
    <string name="metric">metric[cm/Kg]</string>
    <string name="imperial">imperial[feet/lb]</string>
    <string name="save_button">Save the Result</string>
    <string name="enter_title">Enter Values</string>
    <string name="result_title">Result</string>
    <string name="result_date">ERROR</string>
    <string name="result_figure">/??</string>
    <string name="result_date_title">date</string>
    <string name="result_figure_title">figure</string>
    <string name="graph_button">Show Graph</string>
    <string name="welcome">Welcome to the BMI calculator, you can either add a new entry or check out your history</string>
    <string name="newentry">Add New Entry</string>
    <string name="showHistory">Show History</string>
    <string name="back">Home</string>
    <string name="deleteH_button">Delete History</string>
    <string name="list_button">Show List</string>
    <string name="history_title"> - History</string>
    <string name="graph_title"> - Graph</string>
    <string name="email">Send History as Email</string>
    <string name="wiki">Details of BMI - wiki</string>

</resources>