<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/main_title"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/titleResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/enter_title"
        android:textColor="#000000"
        android:textSize="45dp" />

    <LinearLayout
        android:id="@+id/metricEnter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/heightEnter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:hint="@string/mHeight"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/weightEnter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/mWeight"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/imperialEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/heightFeetEnter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/iFeetHeight"
                android:inputType="numberDecimal" >
            </EditText>

            <EditText
                android:id="@+id/heightInchesEnter"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/iInchesHeight"
                android:inputType="numberDecimal"
                android:paddingLeft="25dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/weightImpEnter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:hint="@string/impWeight"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/submitButton"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bHome"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            android:textSize="15dp" />

        <ToggleButton
            android:id="@+id/metricOrImperial"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:checked="true"
            android:text="@string/units"
            android:textOff="@string/units"
            android:textOn="@string/units" />
    </LinearLayout>

</LinearLayout>