<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/main_title"
        android:textColor="#000000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/titleResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/result_title"
        android:textColor="#000000"
        android:textSize="45dp" />

    <TableLayout
        android:id="@+id/result_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/green_result" >

        <TableRow
            android:id="@+id/result_titles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/resultDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="65"
                android:paddingLeft="25dp"
                android:text="@string/result_date_title"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/resultFigureTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="35"
                android:text="@string/result_figure_title"
                android:textColor="#FFFFFF" />
        </TableRow>

        <TableRow
            android:id="@+id/result_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/resultDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="65"
                android:gravity="left"
                android:paddingLeft="25dp"
                android:text="@string/result_date"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />

            <TextView
                android:id="@+id/resultFigure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="35"
                android:text="@string/result_figure"
                android:textColor="#FFFFFF"
                android:textSize="30dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/bSave"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/save_button"
            android:textSize="20dp" />

        <Button
            android:id="@+id/bResultHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/back"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>